Added hunt system